# listslistslists

./: .gitignore  Cargo.toml  book.toml  insert_big.md  san-blacklist.txt
.github/workflows/: checks.yml  miri.yml
benches/: benches.rs
benchmarks/: Cargo.toml
benchmarks/benches/: benches.rs
crates/first/: Cargo.toml
crates/first/src/: lib.rs
crates/second/src/: lib.rs
crates/third/: Cargo.toml
crates/third/src/: lib.rs
lists/fifth/: Cargo.toml
lists/fifth/src/: lib.rs
lists/first/src/: lib.rs
lists/fourth/: Cargo.toml
lists/fourth/src/: lib.rs
lists/second/: Cargo.toml
lists/second/src/: lib.rs
lists/sixth/: Cargo.toml
lists/sixth/src/: lib.rs
lists/third/src/: lib.rs
src/: SUMMARY.md  arena.rs  arena_option.rs  lib.rs  static_rc.rs
