[package]
name = "linked-list"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ghost-cell = { version = "0.2.2", features = ["experimental-ghost-cursor"]}
slab = "0.4.7"
# smallvec = "1.10.0"
static-rc = { version = "0.6.0", features = ["compile-time-ratio", "experimental-lift"] }
typed-arena = "2.0.1"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benches"
harness = false
