[package]
name = "benchmarks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
first = { path = "../lists/first" }
second = { path = "../lists/second" }
third = { path = "../lists/third" }
ghost-cell = "0.2.2"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benches"
harness = false