[package]
name = "benchmarks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
first = { path = "../lists/first" }
second = { path = "../lists/second" }
third = { path = "../lists/third" }
fourth = { path = "../lists/fourth" }
fifth = { path = "../lists/fifth" }
sixth = { path = "../lists/sixth" }
ghost-cell = "0.2.2"
typed-arena = "2.0.1"

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }

[[bench]]
name = "benches"
harness = false